k8s/apps/rocio/solidinvoice/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: solidinvoice
  namespace: rocio
spec:
  ports:
    - name: http
      port: 8765
      targetPort: http
  selector:
    app.kubernetes.io/name: solidinvoice
