k8s/apps/rocio/solidinvoice/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: solidinvoice
  namespace: rocio
spec:
  hostnames:
    - invoice.rociobolanos.com
  parentRefs:
    - name: internal-rociobolanos-com
      namespace: network
      kind: ListenerSet
      sectionName: https
  rules:
    - backendRefs:
        - name: solidinvoice
          port: 8765
